--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.0",
+    "hls.js": "^0.14.17",
     "nuxt": "^2.14.6",
+    "vue-aplayer": "^1.6.1",
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {}
