实现音乐播放、暂停、切换、歌词滚动等功能

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.14.0",
     "hls.js": "^0.14.17",
+    "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "nuxt": "^2.14.6",
     "stylus": "^0.54.7",
